--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fontsource/montserrat": "^4.5.13",
     "@fontsource/montserrat-alternates": "^4.5.11",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.16",
