--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
+    "react-sticky-box": "^1.0.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
