--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "societal-muse",
   "version": "0.1.0",
+  "homepage": "https://navadhiti.github.io/societalplatform-muse/react-gh-pages",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -30,12 +31,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -54,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
