--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "react-adobe-fonts": "^0.1.0",
     "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-share": "^4.4.1",
-    "react-slick": "^0.29.0",
     "react-speech-kit": "^3.0.1",
     "react-sticky-box": "^1.0.2",
     "styled-components": "^5.3.6",
