--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "html-react-parser": "^3.0.6",
     "react": "^18.2.0",
     "react-adobe-fonts": "^0.1.0",
     "react-card-flip": "^1.2.0",
