--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-share": "^4.4.1",
     "react-speech-kit": "^3.0.1",
     "react-sticky-box": "^1.0.2",
