--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@fontsource/montserrat-alternates": "^4.5.11",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.16",
-    "@mui/material": "^5.10.16",
+    "@mui/material": "^5.11.3",
     "@mui/styled-engine-sc": "^5.10.16",
+    "@mui/styles": "^5.11.2",
+    "@react-pdf/renderer": "^3.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
